8006894: G1: Number of marking threads missing from PrintFlagsFinal output

Set ConcGCThreads to the calculated number of marking threads.

Reviewed-by: jmasa, ysr